recursion.lessons.recursion.tree.Tree.scala.error
Tree:23: error: ')' expected but ';' found.
recule(length);
              ^